--- a/package.json
+++ b/package.json
@@ -9,19 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
+    "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
+    "flowbite": "^1.8.1",
+    "mobx": "^6.10.2",
+    "mobx-react": "^9.0.1",
+    "next": "13.5.5",
+    "next-auth": "^4.24.3",
     "react": "^18",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18",
-    "next": "13.5.5"
+    "react-hook-form": "^7.47.0",
+    "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@heroicons/react": "^1.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "daisyui": "^3.9.3",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.5",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.5"
+    "typescript": "^5"
   }
 }
