--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
+    "@tanstack/react-query": "^5.4.3",
+    "@tanstack/react-query-devtools": "^5.4.3",
+    "@tanstack/react-query-next-experimental": "^5.4.3",
+    "@types/react-query": "^1.2.9",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "flowbite": "^1.8.1",
@@ -31,6 +35,7 @@
   },
   "devDependencies": {
     "@heroicons/react": "^1.0.6",
+    "@tanstack/eslint-plugin-query": "^5.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -39,6 +44,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.5",
     "postcss": "^8",
+    "react-query": "^3.39.3",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
