--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-auth": "^4.24.3",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.17.0",
