--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
+    "@nestjs/serve-static": "^4.0.0",
     "@tanstack/react-query": "^5.4.3",
     "@tanstack/react-query-devtools": "^5.4.3",
     "@tanstack/react-query-next-experimental": "^5.4.3",
