--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "flowbite": "^1.8.1",
+    "jsonwebtoken": "^9.0.2",
     "mobx": "^6.10.2",
     "mobx-react": "^9.0.1",
     "next": "13.5.5",
