--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.4.3",
     "@tanstack/react-query-devtools": "^5.4.3",
     "@tanstack/react-query-next-experimental": "^5.4.3",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "flowbite": "^1.8.1",
     "mobx": "^6.10.2",
