--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@heroicons/react": "^1.0.6",
+    "@types/node": "^20.10.4",
     "@types/react": "^18",
     "eslint": "^8",
     "eslint-config-next": "13.5.5",
